--- a/Obligatorio1_MDA/src/interfaz/IUGraficaMenu.form
+++ b/Obligatorio1_MDA/src/interfaz/IUGraficaMenu.form
@@ -74,7 +74,11 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="Obligatorio 1"/>
+    <Property name="title" type="java.lang.String" value="Obligatorio 1 - MDA"/>
+    <Property name="location" type="java.awt.Point" editor="org.netbeans.beaninfo.editors.PointEditor">
+      <Point value="[0, 0]"/>
+    </Property>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="barraMenu"/>
